; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/oxygen/extr_oxygen.c_ak4396_registers_init.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/oxygen/extr_oxygen.c_ak4396_registers_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oxygen = type { i32*, %struct.generic_data* }
%struct.generic_data = type { i32, i32** }

@AK4396_CONTROL_1 = common dso_local global i64 0, align 8
@AK4396_DIF_24_MSB = common dso_local global i32 0, align 4
@AK4396_RSTN = common dso_local global i32 0, align 4
@AK4396_CONTROL_2 = common dso_local global i64 0, align 8
@AK4396_CONTROL_3 = common dso_local global i64 0, align 8
@AK4396_PCM = common dso_local global i32 0, align 4
@AK4396_LCH_ATT = common dso_local global i64 0, align 8
@AK4396_RCH_ATT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.oxygen*)* @ak4396_registers_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ak4396_registers_init(%struct.oxygen* %0) #0 {
  %2 = alloca %struct.oxygen*, align 8
  %3 = alloca %struct.generic_data*, align 8
  %4 = alloca i32, align 4
  store %struct.oxygen* %0, %struct.oxygen** %2, align 8
  %5 = load %struct.oxygen*, %struct.oxygen** %2, align 8
  %6 = getelementptr inbounds %struct.oxygen, %struct.oxygen* %5, i32 0, i32 1
  %7 = load %struct.generic_data*, %struct.generic_data** %6, align 8
  store %struct.generic_data* %7, %struct.generic_data** %3, align 8
  store i32 0, i32* %4, align 4
  br label %8

8:                                                ; preds = %64, %1
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.generic_data*, %struct.generic_data** %3, align 8
  %11 = getelementptr inbounds %struct.generic_data, %struct.generic_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = icmp ult i32 %9, %12
  br i1 %13, label %14, label %67

14:                                               ; preds = %8
  %15 = load %struct.oxygen*, %struct.oxygen** %2, align 8
  %16 = load i32, i32* %4, align 4
  %17 = load i64, i64* @AK4396_CONTROL_1, align 8
  %18 = load i32, i32* @AK4396_DIF_24_MSB, align 4
  %19 = load i32, i32* @AK4396_RSTN, align 4
  %20 = or i32 %18, %19
  %21 = call i32 @ak4396_write(%struct.oxygen* %15, i32 %16, i64 %17, i32 %20)
  %22 = load %struct.oxygen*, %struct.oxygen** %2, align 8
  %23 = load i32, i32* %4, align 4
  %24 = load i64, i64* @AK4396_CONTROL_2, align 8
  %25 = load %struct.generic_data*, %struct.generic_data** %3, align 8
  %26 = getelementptr inbounds %struct.generic_data, %struct.generic_data* %25, i32 0, i32 1
  %27 = load i32**, i32*** %26, align 8
  %28 = getelementptr inbounds i32*, i32** %27, i64 0
  %29 = load i32*, i32** %28, align 8
  %30 = load i64, i64* @AK4396_CONTROL_2, align 8
  %31 = getelementptr inbounds i32, i32* %29, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @ak4396_write(%struct.oxygen* %22, i32 %23, i64 %24, i32 %32)
  %34 = load %struct.oxygen*, %struct.oxygen** %2, align 8
  %35 = load i32, i32* %4, align 4
  %36 = load i64, i64* @AK4396_CONTROL_3, align 8
  %37 = load i32, i32* @AK4396_PCM, align 4
  %38 = call i32 @ak4396_write(%struct.oxygen* %34, i32 %35, i64 %36, i32 %37)
  %39 = load %struct.oxygen*, %struct.oxygen** %2, align 8
  %40 = load i32, i32* %4, align 4
  %41 = load i64, i64* @AK4396_LCH_ATT, align 8
  %42 = load %struct.oxygen*, %struct.oxygen** %2, align 8
  %43 = getelementptr inbounds %struct.oxygen, %struct.oxygen* %42, i32 0, i32 0
  %44 = load i32*, i32** %43, align 8
  %45 = load i32, i32* %4, align 4
  %46 = mul i32 %45, 2
  %47 = zext i32 %46 to i64
  %48 = getelementptr inbounds i32, i32* %44, i64 %47
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @ak4396_write(%struct.oxygen* %39, i32 %40, i64 %41, i32 %49)
  %51 = load %struct.oxygen*, %struct.oxygen** %2, align 8
  %52 = load i32, i32* %4, align 4
  %53 = load i64, i64* @AK4396_RCH_ATT, align 8
  %54 = load %struct.oxygen*, %struct.oxygen** %2, align 8
  %55 = getelementptr inbounds %struct.oxygen, %struct.oxygen* %54, i32 0, i32 0
  %56 = load i32*, i32** %55, align 8
  %57 = load i32, i32* %4, align 4
  %58 = mul i32 %57, 2
  %59 = add i32 %58, 1
  %60 = zext i32 %59 to i64
  %61 = getelementptr inbounds i32, i32* %56, i64 %60
  %62 = load i32, i32* %61, align 4
  %63 = call i32 @ak4396_write(%struct.oxygen* %51, i32 %52, i64 %53, i32 %62)
  br label %64

64:                                               ; preds = %14
  %65 = load i32, i32* %4, align 4
  %66 = add i32 %65, 1
  store i32 %66, i32* %4, align 4
  br label %8

67:                                               ; preds = %8
  ret void
}

declare dso_local i32 @ak4396_write(%struct.oxygen*, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
